<resources>
    <string name="app_name">Cost</string>

    <string name="action_settings">Settings</string>

    <string name="Navigation_open">open</string>
    <string name="Navigation_close">close</string>

    <string name="firstmenu">first</string>
    <string name="secondmenu">second</string>
    <string name="setting">设置</string>
    
    <string name="income">收入</string>
    <string name="pay">支出</string>

    <string name="dialogtitle">账本设置</string>

    <!-- bill write activity string-->
    <string name="periodno">一次性</string>
    <string name="periodday">每天</string>
    <string name="periodweek">每周</string>
    <string name="periodtwoweek">每两周</string>
    <string name="periodmonth">每月</string>
    <string name="stateincome">收入</string>
    <string name="statepay">支出</string>
    <string name="label_sure">创建</string>
    <string name="label_create">选定</string>
    <string name="label">标签</string>

    <string name="unique">Unique Studio</string>

    <!-- about us string-->
    <string name="staff_name1">K.L</string>
    <string name="staff_position1">Programmer</string>
    <string name="staff_email1">kaili@hustunique.com</string>
    <string name="staff_name2">张静静</string>
    <string name="staff_position2">Product Manager</string>
    <string name="staff_email2">jingyizhang@hustunique.com</string>
    <string name="staff_name3">yangChen</string>
    <string name="staff_position3">Designer</string>
    <string name="staff_email3">yangcc666@gmail.com</string>

    <!-- cost activity string-->
    <string name="header_income">收入:</string>
    <string name="header_pay">支出:</string>


</resources>
