<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Cost">
    <item
        android:id="@+id/first"
        android:title="@string/firstmenu"
        app:showAsAction="ifRoom"
        android:orderInCategory="90"
        android:icon="@mipmap/ic_bill_grey_36dp"
        />
    <item
        android:id="@+id/second"
        android:title="@string/secondmenu"
        app:showAsAction="ifRoom"
        android:orderInCategory="80"
        android:icon="@drawable/ic_chart"/>
    <item
        android:id="@+id/setting"
        app:showAsAction="ifRoom"
        android:orderInCategory="100"
        android:title="@string/setting"
        android:icon="@mipmap/ic_more_vert_white_24dp"/>
</menu>
